kubernetes/apps/default/qbittorrent/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`torrents.f9.casa`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
      middlewares:
        - name: default-headers
          namespace: traefik
